--- a/src/tailwind/components/header.css
+++ b/src/tailwind/components/header.css
@@ -1,5 +1,5 @@
 .header-wrapper {
-  @apply top-0  z-[999] w-full fixed [@media(min-width:1600px)]:max-w-[2000px]  border-b border-shop-gray-border bg-purple-100 dark:bg-purple-950 ;
+  @apply top-0  z-[999] w-full fixed [@media(min-width:1600px)]:max-w-[2000px]  border-b border-shop-gray-border bg-purple-100 dark:bg-purple-900 ;
   .header-wrapper__header {
     @apply containerD mx-auto h-[70px] px-6;
     .header__nav {
@@ -10,13 +10,13 @@
           @apply mt-2 mr-2;
         }
         .toggle-btn {
-          @apply text-gray-500 hover:text-gray-600 focus:text-gray-600 focus:outline-none dark:text-gray-200 dark:hover:text-gray-400 dark:focus:text-gray-400;
+          @apply text-gray-500 hover:text-gray-600 focus:text-gray-600 focus:outline-none dark:text-gray-200 dark:hover:text-gray-400 dark:focus:text-gray-400 ;
         }
       }
       .header-menu-wrapper {
-        @apply hidden w-full items-center bg-blue-100 px-6 py-4 transition-all duration-300 ease-in-out lg:mb-auto lg:flex lg:justify-between lg:gap-[75px] lg:bg-transparent lg:p-0;
+        @apply hidden w-full items-center px-6 py-4 transition-all duration-300 ease-in-out lg:mb-auto lg:flex lg:justify-between lg:gap-[75px] lg:bg-transparent lg:p-0;
         .header_menu {
-          @apply -mx-6 flex flex-col lg:mx-6 lg:flex-row lg:items-center lg:pt-6;
+          @apply -mx-6 flex  lg:mx-6 lg:flex-row lg:items-center lg:pt-6;
         }
       }
     }
